RASS-1388 fix not found link for correct alternative many period lengths

--- a/server/views/pages/sentencing/correct-many-period-length.njk
+++ b/server/views/pages/sentencing/correct-many-period-length.njk
@@ -46,7 +46,7 @@
         ]
     }) }}
     <p class="govuk-body govuk-!-margin-top-4 govuk-!-margin-bottom-6">
-        <a href="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/offences/{{ chargeUuid }}/alternative-correct-many-period-length{{ submitQuery }}" class="govuk-link govuk-link--no-visited-state">The {{ periodLengthHeader }} is formatted differently</a>
+        <a href="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/offences/{{ chargeUuid }}/correct-many-alternative-period-length{{ submitQuery }}" class="govuk-link govuk-link--no-visited-state" data-qa="alternative-format-link">The {{ periodLengthHeader }} is formatted differently</a>
     </p>
 {% endset %}
 
