--- a/server/views/pages/courtAppearance/delete-appearance.njk
+++ b/server/views/pages/courtAppearance/delete-appearance.njk
@@ -20,7 +20,7 @@
                             classes: "govuk-fieldset__legend--l"
                         }
                 }) %}
-                    <div class="govuk-body l"> {{description }} </div>
+                    <div class="govuk-body" data-qa="appearance-description"> {{description }} </div>
 
                     {% if lastAppearance %}
                                               {{ govukInsetText({
