RASS-1372 minor improvements on page

--- a/server/views/pages/sentenceEnvelopes.njk
+++ b/server/views/pages/sentenceEnvelopes.njk
@@ -15,11 +15,11 @@
                   },{
                     text: 'Case reference'
                   },{
-                    text: 'Sentence reference'
+                    text: 'NOMIS Line No/DPS Count'
                   },{
                     text: 'Sentence type'
                   },{
-                    text: 'Consec or concurrent'
+                    text: 'Consecutive to'
                   }
                 ],
                 rows: sentenceRows
