RASS-1577 add sentence details page

--- a/server/views/pages/sentenceEnvelopes.njk
+++ b/server/views/pages/sentenceEnvelopes.njk
@@ -20,6 +20,8 @@
                     text: 'Sentence type'
                   },{
                     text: 'Consecutive to'
+                  }, {
+                    text: ''
                   }
                 ],
                 rows: sentenceRows
