--- a/server/views/pages/offence/offence-code.njk
+++ b/server/views/pages/offence/offence-code.njk
@@ -4,7 +4,7 @@
 {% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
 
 
-{% set pageTitle = applicationName + " - Add a court case Warrant Date" %}
+{% set pageTitle = applicationName + " - Enter the offence code" %}
 
 {% block pageContent %}
             <form method="post" autocomplete="off">
