--- a/server/views/pages/offence/offence-conviction-date.njk
+++ b/server/views/pages/offence/offence-conviction-date.njk
@@ -21,6 +21,7 @@
                             classes: "govuk-fieldset__legend--l"
                         }
                     },
+                    hint: offenceHint,
                     items: [
                         {
                             id: 'convictionDate-day',
