--- a/server/views/pages/offence/period-length.njk
+++ b/server/views/pages/offence/period-length.njk
@@ -21,6 +21,7 @@
                         classes: "govuk-fieldset__legend--l"
                         }
                     },
+                    hint: offenceHint,
                     items: [
                     {
                         classes: "govuk-input--width-2" + (" govuk-input--error" if errors | findError('sentenceLength-years') else ''),
