--- a/server/views/pages/offence/sentence-serve-type.njk
+++ b/server/views/pages/offence/sentence-serve-type.njk
@@ -46,6 +46,7 @@
                             classes: "govuk-fieldset__legend--l"
                         }
                     },
+                    hint: offenceHint,
                     errorMessage:  errors | findError('sentenceServeType'),
                     items: serveTypeItems
                 }) }}
