--- a/server/views/pages/offence/sentence-type.njk
+++ b/server/views/pages/offence/sentence-type.njk
@@ -38,6 +38,7 @@
                             classes: "govuk-fieldset__legend--l"
                         }
                     },
+                    hint: offenceHint,
                     errorMessage:  errors | findError('sentenceType'),
                     items: sentenceTypeItems
                 }) }}
