--- a/server/views/pages/sentencing/correct-many-period-length.njk
+++ b/server/views/pages/sentencing/correct-many-period-length.njk
@@ -84,9 +84,7 @@
                     isPageHeading: true
                 }
             },
-            hint: {
-                text: offenceCode + " - " + offenceDescription
-            },
+            hint: offenceHint,
             errorMessage: errors | findError('correctPeriodLengthUuid'),
             items: radios
         }) }}
