--- a/server/views/pages/offence/count-number.njk
+++ b/server/views/pages/offence/count-number.njk
@@ -5,6 +5,7 @@
 {% from "govuk/components/details/macro.njk" import govukDetails %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 {% from "govuk/components/inset-text/macro.njk" import govukInsetText %}
+{% from "govuk/components/hint/macro.njk" import govukHint %}
 
 {% set yesHtml %}
   {{ govukInput({
@@ -27,12 +28,14 @@
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
                 {% include "../../partials/offenceCaption.njk" %}
                 <h1 class="govuk-heading-l">Is there a count number for this offence?</h1>
-                {% if submitToEditOffence !== 'true' %}
-                    <p class="govuk-body-l govuk-!-margin-top-3" data-qa="offenceParagraph">{{ offence.offenceCode }} - {{ offenceDetails.description }} committed on {{ offence.offenceStartDate | formatDate }}{{" to " + offence.offenceEndDate | formatDate if offence.offenceEndDate }}</p>
-                {% endif %}
+                 {% if offenceHint %}
+                    {{
+                      govukHint(offenceHint)
+                    }}
+                  {% endif %}
                 {{ govukInsetText({
-                                            text: "By adding the count number, this service can accurately determine the consecutive chain"
-                                        }) }}
+                    text: "By adding the count number, this service can accurately determine the consecutive chain"
+                }) }}
                 {% set countNumberHelpHtml %}
                   <p class="govuk-body">You can find the count number on the:</p>
                   <ul class="govuk-list govuk-list--bullet">
