--- a/server/views/pages/offence/offence-outcome.njk
+++ b/server/views/pages/offence/offence-outcome.njk
@@ -7,11 +7,6 @@
 
 {% set fieldSetHtml %}
     <h1 class="govuk-fieldset__heading{% if legacyCaseOutcome %} govuk-!-static-margin-bottom-3{% endif %}">Select the outcome for this offence</h1>
-    {% if offenceHint %}
-        {{
-            govukHint(offenceHint)
-        }}
-    {% endif %}
     {% if legacyCaseOutcome %}
     <p class="govuk-body-l govuk-!-static-margin-bottom-3" data-qa="legendParagraph">{{ legacyCaseOutcome }}</p>
     {% endif %}
@@ -25,6 +20,7 @@
                         classes: "govuk-fieldset__legend--l"
                         }
                     },
+                    hint: offenceHint,
                     items: []
     } %}
 
