--- a/server/views/pages/offence/count-number.njk
+++ b/server/views/pages/offence/count-number.njk
@@ -5,6 +5,7 @@
 {% from "govuk/components/details/macro.njk" import govukDetails %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 {% from "govuk/components/inset-text/macro.njk" import govukInsetText %}
+{% from "govuk/components/hint/macro.njk" import govukHint %}
 
 {% set yesHtml %}
   {{ govukInput({
@@ -26,13 +27,22 @@
             <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/offences/{{ chargeUuid }}/submit-count-number{{ "?submitToEditOffence=true" if submitToEditOffence }}" autocomplete="off">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
                 {% include "../../partials/offenceCaption.njk" %}
-                <h1 class="govuk-heading-l">Is there a count number for this offence?</h1>
-                {% if submitToEditOffence !== 'true' %}
-                    <p class="govuk-body-l govuk-!-margin-top-3" data-qa="offenceParagraph">{{ offence.offenceCode }} - {{ offenceDetails.description }} committed on {{ offence.offenceStartDate | formatDate }}{{" to " + offence.offenceEndDate | formatDate if offence.offenceEndDate }}</p>
-                {% endif %}
+                {% call govukFieldset({
+                        describedBy: "hasCountNumber-error" if errorMessage else "",
+                        legend: {
+                            text: "Is there a count number for this offence?",
+                            isPageHeading: true,
+                            classes: "govuk-fieldset__legend--l"
+                        }
+                    }) %}
+                 {% if offenceHint %}
+                    {{
+                      govukHint(offenceHint)
+                    }}
+                  {% endif %}
                 {{ govukInsetText({
-                                            text: "By adding the count number, this service can accurately determine the consecutive chain"
-                                        }) }}
+                    text: "By adding the count number, this service can accurately determine the consecutive chain"
+                }) }}
                 {% set countNumberHelpHtml %}
                   <p class="govuk-body">You can find the count number on the:</p>
                   <ul class="govuk-list govuk-list--bullet">
@@ -70,6 +80,8 @@
                   text: "Continue",
                   attributes: {  'data-qa': 'continue-button' }
                 }) }}
+
+                {% endcall %}
             </form>
 
 {% endblock %}
