RASS-1614 add non custodial option to warrant type page

--- a/server/views/pages/courtAppearance/warrant-type.njk
+++ b/server/views/pages/courtAppearance/warrant-type.njk
@@ -26,16 +26,7 @@
                         classes: "govuk-fieldset__legend--l"
                         }
                     },
-                    items: [
-                        {
-                            value: "REMAND",
-                            text: "Remand"
-                        },
-                        {
-                            value: "SENTENCING",
-                            text: "Sentencing"
-                        }
-                    ]
+                    items: warrantTypeOptions
                 }) }}
 
                 {{ govukButton({
