RASS-1616 fix divider when only sublist outcomes (#1161)
* RASS-1616 fix divider when only sublist outcomes

* space fix

--- a/server/views/pages/courtAppearance/overall-case-outcome.njk
+++ b/server/views/pages/courtAppearance/overall-case-outcome.njk
@@ -35,7 +35,9 @@
 {% endfor %}
 
 {% if subListOutcomes.length %}
-    {{ radiosData.items.push({ divider: "or"}) }}
+    {% if mainOutcomes.length %}
+        {{ radiosData.items.push({ divider: "or"}) }}
+    {% endif %}
 
     {% for caseOutcome in subListOutcomes %}
          {% set caseOutcomeValue = caseOutcome.outcomeUuid + '|' + caseOutcome.relatedChargeOutcomeUuid %}
