RASS-1617 started end to end test for non custodial

--- a/server/views/pages/courtAppearance/check-answers.njk
+++ b/server/views/pages/courtAppearance/check-answers.njk
@@ -67,7 +67,7 @@
     }
 ] %}
 
-{% if isRemandWarrant %}
+{% if courtAppearance.warrantType !== 'SENTENCING' %}
     {% set checkAnswersRows = checkAnswersRows.concat([
         {
             key: {
