RASS-1428: replaced offence will mark as replaced and new offence will be saved.

--- a/server/views/pages/offence/offence-date.njk
+++ b/server/views/pages/offence/offence-date.njk
@@ -22,6 +22,11 @@
                         isPageHeading: true
                     }
                 }) %}
+                {% if offenceName %}
+                                        <div id="fieldset-hint" class="govuk-hint">
+                                           {{ offenceName }}
+                                        </div>
+                                    {% endif %}
 
                     {{ govukDateInput({
                         id: "offenceStartDate",
