--- a/server/views/pages/offence/offence-code.njk
+++ b/server/views/pages/offence/offence-code.njk
@@ -5,17 +5,23 @@
 
 
 {% set pageTitle = applicationName + " - Enter the offence code" %}
+{% set hintText = "" %}
+{% if offenceName %}
+    {% set hintText = offenceName %}
+{% endif %}
 
 {% block pageContent %}
             <form method="post" autocomplete="off">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
                 {% include "../../partials/offenceCaption.njk" %}
-
                 {{ govukInput({
                     label: {
                         text: "Enter the offence code",
                         classes: "govuk-label--l",
                         isPageHeading: true
+                    },
+                    hint:{
+                    text: hintText
                     },
                     id: "offence-code",
                     name: "offenceCode",
