RASS-1647 update button content

--- a/server/views/pages/offence/update-outcome.njk
+++ b/server/views/pages/offence/update-outcome.njk
@@ -50,7 +50,7 @@
         {{ govukRadios(radiosData) }}
 
         {{ govukButton({
-            text: "Save and continue",
+            text: "Continue",
             attributes: {  'data-qa': 'continue-button' }
         }) }}
     </form>
