RASS-1654 show Select consecutive or current link on update offence outcomes page

--- a/server/views/pages/offence/update-offence-outcomes.njk
+++ b/server/views/pages/offence/update-offence-outcomes.njk
@@ -120,6 +120,11 @@
                         fineAmount: offence.sentence.fineAmount,
                         mergedFromCase: offence.mergedFromCase,
                         courtDetails: courtMap,
+                        consecutiveConcurrentLink: {
+                            href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference + "/" + addOrEditCourtAppearance + "/" + appearanceReference +"/offences/" + offence.chargeUuid + "/select-consecutive-concurrent",
+                            text: 'Select consecutive or current',
+                            classes: "govuk-link--no-visited-state"
+                        } if offence.sentence,
                         actions: {
                             items: [
                                 {
