RASS-1428: full offence replacement rewritten

--- a/server/views/pages/offence/offence-code.njk
+++ b/server/views/pages/offence/offence-code.njk
@@ -5,6 +5,10 @@
 
 
 {% set pageTitle = applicationName + " - Enter the offence code" %}
+{% set hintText = "" %}
+{% if offenceName %}
+    {% set hintText = offenceName %}
+{% endif %}
 
 {% block pageContent %}
             <form method="post" autocomplete="off">
@@ -17,6 +21,9 @@
                         classes: "govuk-label--l",
                         isPageHeading: true
                     },
+                    hint:{
+                                        text: hintText
+                                        },
                     id: "offence-code",
                     name: "offenceCode",
                     errorMessage: errors | findError('offenceCode'),
