RASS-1644 fix caption and back navigation

--- a/server/views/partials/offenceCaption.njk
+++ b/server/views/partials/offenceCaption.njk
@@ -1,5 +1,7 @@
 <span class="govuk-caption-l" data-qa="offences-caption">
-  {% if not submitToEditOffence or submitToEditOffence | length == 0 %}
+  {% if isRemandToSentencingJourney %}
+    Update offence outcomes
+  {% elif not submitToEditOffence or submitToEditOffence | length == 0 %}
     Add offences
   {% endif %}
 </span>
