RASS-1692: backlink generation refactored

--- a/server/views/pages/sentencing/appearance-details.njk
+++ b/server/views/pages/sentencing/appearance-details.njk
@@ -53,7 +53,7 @@
     value: { text: overallCaseOutcome },
     actions: {
       items: [{
-        href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/sentencing/overall-case-outcome",
+        href: "/person/" + nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/sentencing/overall-case-outcome?backTo=sentencingCourtAppearance",
         text: "Edit",
         visuallyHiddenText: "overall case outcome",
         classes: "govuk-link--no-visited-state"
